--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,14 @@ Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==22.0.0
 importlib_metadata==8.0.0
 importlib_resources==6.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
+packaging==24.1
 PyJWT==2.8.0
 pytz==2024.1
 six==1.16.0
