--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,14 @@
 {
-    "builds": [
-      {
-        "src": "index.html",
-        "use": "@vercel/static"
-      }
-    ]
-  }
-    
-  
+  "builds": [
+    {
+      "src": "client/pages/login.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/client/pages/$1"
+    }
+  ]
+}
