--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
 {
-  "builds": [
-    {
-      "src": "client/pages/login.html",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/client/pages/$1"
-    }
+  "rewrites":  [
+    {"source": "/(.*)", "destination": "/"}
   ]
 }
